<resources>
    <string name="app_name">MVVMApplication</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="myInfoActivityChick">跳转MyInfoActivity</string>
    <string name="myShowActivityChick">转入MyShowActivity</string>
    <string name="myListActivityChick">抵达MyListActivity</string>
    <string name="myChatActivityChick">抵达MyChatActivity</string>
    <string name="myFansActivityChick">抵达MyFansActivity</string>
    <string name="toolBarTitle">Show Time</string>
    <string name="title_activity_my_list">MyListActivity</string>

    <string name="clickme">Click Me!</string>
    <string name="action_settings">Settings</string>
    <string name="add_friend">添加好友在这里哦</string>
    <string name="nearby">查看附近的人</string>
    <string name="slide_up_for_more">上滑查看更多</string>
    <string name="title_activity_simple_guide_view">SimpleGuideViewActivity</string>
    <string name="title_activity_muti_guide_view">MutiGuideViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
